--- a/app/src/main/res/layout/fragment_2_layout.xml
+++ b/app/src/main/res/layout/fragment_2_layout.xml
@@ -8,15 +8,6 @@
 <com.yifuyou.weather_t.PaintView
     android:id="@+id/paint_view"
     android:layout_width="match_parent"
-    android:layout_height="100dp"/>
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="----========-----"/>
-
-
-
-
-
+    android:layout_height="wrap_content"/>
 
 </LinearLayout>
