--- a/app/src/main/res/layout/f3_list_item_layout.xml
+++ b/app/src/main/res/layout/f3_list_item_layout.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/f3_item_3"
-        />
+        android:contentDescription="@string/air_photo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
