--- a/app/src/main/res/layout/fragment_0_layout.xml
+++ b/app/src/main/res/layout/fragment_0_layout.xml
@@ -10,14 +10,14 @@
         android:id="@+id/nowWeather_text"
         android:layout_width="@dimen/big_textView"
         android:layout_height="@dimen/big_textView"
-        android:text="晴"
+        android:text="@string/default_weather"
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintVertical_bias="0.1" />
 
     <ImageView
         android:id="@+id/nowWeather_img"
@@ -29,14 +29,15 @@
         app:layout_constraintStart_toEndOf="@+id/nowWeather_text"
         app:layout_constraintTop_toTopOf="@+id/nowWeather_text"
         app:layout_constraintVertical_bias="0.648"
-        app:srcCompat="@drawable/qing" />
+        app:srcCompat="@drawable/qing"
+        android:contentDescription="@string/today_weather_photo" />
 
     <TextView
         android:id="@+id/nowWeather_tem"
         android:layout_width="@dimen/big_textView"
         android:layout_height="@dimen/mid_textView_high"
         android:autoSizeTextType="uniform"
-        android:text="0/0 ℃"
+        android:text="@string/default_tem"
         app:layout_constraintEnd_toEndOf="@+id/nowWeather_text"
         app:layout_constraintStart_toStartOf="@+id/nowWeather_text"
         app:layout_constraintTop_toBottomOf="@+id/nowWeather_text" />
@@ -46,7 +47,7 @@
         android:layout_width="@dimen/big_textView"
         android:layout_height="@dimen/default_textView_high"
         android:autoSizeTextType="uniform"
-        android:text="更多"
+        android:text="@string/more_info"
         app:layout_constraintEnd_toEndOf="@+id/nowWeather_text"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/nowWeather_text"
@@ -56,7 +57,7 @@
         android:id="@+id/nowWeather_air"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="空气质量"
+        android:text="@string/air_quality"
         app:layout_constraintEnd_toEndOf="@+id/nowWeather_img"
         app:layout_constraintTop_toBottomOf="@+id/nowWeather_img" />
 </androidx.constraintlayout.widget.ConstraintLayout>
