--- a/app/src/main/res/layout/fragment_3_layout.xml
+++ b/app/src/main/res/layout/fragment_3_layout.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="七日天气预报"
+        android:text="@string/seven_day_weather_tab"
         android:layout_marginBottom="@dimen/fab_margin"/>
     <HorizontalScrollView
         android:layout_width="wrap_content"
