--- a/app/src/main/res/values-sw1365dp/dimens.xml
+++ b/app/src/main/res/values-sw1365dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">37.9167dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">7.5833dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">75.8333dp</dimen>
 </resources>
