--- a/app/src/main/res/layout/f3_list_item_layout.xml
+++ b/app/src/main/res/layout/f3_list_item_layout.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:paddingHorizontal="2dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
