--- a/app/src/main/res/values-sw1024dp/dimens.xml
+++ b/app/src/main/res/values-sw1024dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">28.4444dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">5.6889dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">56.8889dp</dimen>
 </resources>
