--- a/app/src/main/res/values-sw240dp/dimens.xml
+++ b/app/src/main/res/values-sw240dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">6.6667dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">1.3333dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">13.3333dp</dimen>
 </resources>
