--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">8.8889dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">1.7778dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">17.7778dp</dimen>
 </resources>
