--- a/app/src/main/res/values-sw392dp/dimens.xml
+++ b/app/src/main/res/values-sw392dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">10.8889dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">2.1778dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">21.7778dp</dimen>
 </resources>
