--- a/app/src/main/res/values-sw400dp/dimens.xml
+++ b/app/src/main/res/values-sw400dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">11.1111dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">2.2222dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">22.2222dp</dimen>
 </resources>
