--- a/app/src/main/res/values-sw410dp/dimens.xml
+++ b/app/src/main/res/values-sw410dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">11.3889dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">2.2778dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">22.7778dp</dimen>
 </resources>
