--- a/app/src/main/res/values-sw533dp/dimens.xml
+++ b/app/src/main/res/values-sw533dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">14.8056dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">2.9611dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">29.6111dp</dimen>
 </resources>
