--- a/app/src/main/res/values-sw592dp/dimens.xml
+++ b/app/src/main/res/values-sw592dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">16.4444dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">3.2889dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">32.8889dp</dimen>
 </resources>
