--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">16.6667dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">3.3333dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">33.3333dp</dimen>
 </resources>
