--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">20.0000dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">4.0000dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">40.0000dp</dimen>
 </resources>
