--- a/app/src/main/res/values-sw768dp/dimens.xml
+++ b/app/src/main/res/values-sw768dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">21.3333dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">4.2667dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">42.6667dp</dimen>
 </resources>
