--- a/app/src/main/res/values-sw811dp/dimens.xml
+++ b/app/src/main/res/values-sw811dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">22.5278dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">4.5056dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">45.0556dp</dimen>
 </resources>
