--- a/app/src/main/res/values-sw960dp/dimens.xml
+++ b/app/src/main/res/values-sw960dp/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="fc_p2_bg_radius">26.6667dp</dimen>
     	
     <dimen name="fc_p2_bg_stroke_w">5.3333dp</dimen>
+    	
+    <dimen name="fragment_part_default_padding">53.3333dp</dimen>
 </resources>
