--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     -->
     <dimen name="fc_p2_bg_radius">10dp</dimen>
     <dimen name="fc_p2_bg_stroke_w">2dp</dimen>
+    <dimen name="fragment_part_default_padding">20dp</dimen>
+    <dimen name="fragment_part_default_margin">10dp</dimen>
 </resources>
