--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,20 +25,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="?attr/actionBarSize"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
-                >
-
-                <TextView
-                    android:id="@+id/main_layout_city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:textColor="@color/toolbar_text_color"
-                    android:textSize="@dimen/default_textView_high"
-                    android:text="@string/app_name"
-                    android:gravity="center"
-                    />
-
-            </LinearLayout>
+                android:gravity="center"
+                android:id="@+id/toolbar_layout"
+                android:dividerPadding="10dp"
+                android:divider="@color/teal_209"
+                android:showDividers="middle"
+                />
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
