--- a/app/src/main/res/layout/cities_manage.xml
+++ b/app/src/main/res/layout/cities_manage.xml
@@ -7,21 +7,36 @@
         android:orientation="vertical"
         >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:text=" 选择城市 "
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:id="@+id/choose_result"
             />
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="选定"
+            android:layout_weight="3"
             android:id="@+id/button_choose"/>
 
+    </LinearLayout>
+
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="400dp"
-        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/teal_209"
         >
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="wrap_content"
