--- a/app/src/main/res/layout/city_choose_layout.xml
+++ b/app/src/main/res/layout/city_choose_layout.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
-    android:layout_height="300dp"
-    android:background="@color/teal_209">
+    android:layout_height="wrap_content">
+
     <TextView
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:id="@+id/text_2"/>
+        android:padding="6dp"
+        android:id="@+id/text_2" />
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
