--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,16 +21,39 @@
             android:background="@color/toolbar_background_color"
             app:contentInsetStart="@dimen/default_textView_high"
             app:popupTheme="@style/Theme.WeatherT.PopupOverlay" >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="?attr/actionBarSize"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:id="@+id/toolbar_layout"
-                android:dividerPadding="10dp"
-                android:divider="@color/teal_209"
-                android:showDividers="middle"
-                />
+            <ScrollView
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:id="@+id/toolbar_layout"
+                    android:divider="@drawable/drawable_divider"
+                    android:dividerPadding="10dp"
+                    android:showDividers="middle"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_name"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_name"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_name"
+                        />
+
+                </LinearLayout>
+
+            </ScrollView>
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
