--- a/app/src/main/res/layout/start_layout.xml
+++ b/app/src/main/res/layout/start_layout.xml
@@ -1,41 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/start_image_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:id="@+id/start_image_layout"
-        android:orientation="horizontal"
         android:gravity="center"
-        >
+        android:orientation="horizontal">
+
         <ImageView
+            android:id="@+id/start_sun"
             android:layout_width="@dimen/big_image"
             android:layout_height="@dimen/big_image"
-            android:id="@+id/start_sun"
-            android:src="@drawable/qing"
-            />
+            android:src="@drawable/qing" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:id="@+id/start_app_info"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name" />
 
 
     </LinearLayout>
-
 
 
 </LinearLayout>
