--- a/app/src/main/res/drawable/text_bg_drawable.xml
+++ b/app/src/main/res/drawable/text_bg_drawable.xml
@@ -1,7 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#6800BCD4"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-            <corners android:radius="3dp"/>
+    <item
+        android:state_activated="true">
+        <shape
+            android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="#68074AF6" />
+
+            <corners android:radius="3dp" />
         </shape>
+    </item>
+    <item
+        android:state_pressed="true">
+        <shape
+            android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="#F44336" />
+
+            <corners android:radius="3dp" />
+        </shape>
+    </item>
+    <item
+        android:state_selected="true">
+        <shape
+            android:shape="rectangle">
+            <solid
+                android:color="#5736F4DE" />
+            <stroke android:width="6dp"
+                android:color="#00111111"/>
+            <corners android:radius="6dp" />
+        </shape>
+    </item>
+<item >
+    <shape
+        android:shape="rectangle">
+        <stroke
+            android:width="1dp"
+            android:color="#4000BCD4" />
+
+        <corners android:radius="3dp" />
+    </shape>
+</item>
+</selector>
