--- a/app/src/main/res/layout/cities_manage.xml
+++ b/app/src/main/res/layout/cities_manage.xml
@@ -1,78 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginTop="@dimen/default_textView_high"
+    android:orientation="vertical"
     android:padding="10dp"
-        >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="已选城市："
-        />
+        android:text="已选城市：" />
+
     <GridLayout
+        android:id="@+id/cities_click_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:orientation="horizontal"
-        android:id="@+id/cities_click_layout"
         android:layout_margin="10dp"
-        >
+        android:columnCount="2"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_height="wrap_content"
-            android:text="placeholderText"
-            />
-        <TextView
-        android:layout_height="wrap_content"
-        android:text="placeholderText"
-        />
-    </GridLayout>
+            android:text="placeholderText" />
 
+        <TextView
+            android:layout_height="wrap_content"
+            android:text="placeholderText" />
+    </GridLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text=" 选择城市 "
-            />
+            android:text=" 选择城市 " />
+
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
             android:id="@+id/choose_result"
-            />
-        <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="选定"
-            android:layout_weight="3"
-            android:id="@+id/button_choose"/>
+            android:layout_weight="3" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/teal_209"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/button_choose"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/recyc_1"
-            />
+            android:layout_weight="3"
+            android:text="选定" />
 
     </LinearLayout>
 
+    <!-- <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:orientation="vertical"
+         android:background="@color/teal_209"
+         >
+         <androidx.recyclerview.widget.RecyclerView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:id="@+id/recyc_1"
+             />
 
-    </LinearLayout>
+     </LinearLayout>-->
+
+
+</LinearLayout>
